# SiLi

./: CMakeLists.txt  README.md  busy.yaml  cpmpack.json
src/SiLi/: Iterator.h  Matrix.h  SiLi-Mat.h  SiLi-Quaternion.h  SiLi.h  View.h  concepts.h  fmt.h  operations.h  ostream.h
src/benchmarkSiLi/: DataGenerator.h  benchmark.cpp  benchmarkAddition.cpp  benchmarkDet.cpp  benchmarkInv.cpp  benchmarkInv_Float.cpp  benchmarkMultiplication.cpp
src/exampleSiLi/: example.cpp
src/sili/: Iterator.h  Matrix.h  SiLi-Mat.h  View.h  concepts.h  fmt.h  operations.h  ostream.h  sili-Quaternion.h  sili.h
src/testSiLi/: docs.cpp  testMatrix.cpp
